--- a/app/renderer/index.html
+++ b/app/renderer/index.html
@@ -2,7 +2,9 @@
 <html>
   <head>
     <title>Virgooldoon</title>
-    <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-inline'">
+    <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-inline'" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
+    <link href="./assets/app.css" type="text/css" rel="stylesheet" />
   </head>
   <body>
     <div id="app"></div>
